<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#A1A8A8">

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/textViewDescriptionLogout"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonOK"
            android:layout_width="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/textViewOK"
            android:textAllCaps="false"
            android:background="@drawable/button_rounded"
            android:textColor="@android:color/black"
            android:backgroundTint="#0AFA14"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/textViewCancel"
            android:background="@drawable/button_rounded"
            android:textColor="@android:color/white"
            android:backgroundTint="#FF0000"/>


    </LinearLayout>

</LinearLayout>